@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: config.scm.in,v 1.1 2004/03/26 10:56:19 nobsun Exp $
+;; $Id: config.scm.in,v 1.2 2004/10/14 09:20:57 shiro Exp $
 ;;
 ;; This is intended to be loaded by kahua servers to share common
 ;; configuration parameters.
@@ -158,8 +158,7 @@
              ))
          (unless skip-check? (sanity-check (instance-of <kahua-config>)))
          )
-      (error "configuration file ~a is not readable.  using default settings."
-            cfile))))
+      (errorf "configuration file ~a is not readable." cfile))))
   ;; Include working directory to *load-path*.
   ;; We don't use add-load-path here, since it is a macro that does
   ;; work at compile time.
@@ -208,3 +207,7 @@
   (ref (kahua-config) 'auto-restart))
 
 (provide "kahua/config")
+
+;; Local variables:
+;; mode: scheme
+;; end:
